Fixing cross browser stuffs. Still working on IE image aspect ratio

--- a/resources/gato-component-cards/css/section-gridlayout.scss
+++ b/resources/gato-component-cards/css/section-gridlayout.scss
@@ -32,6 +32,7 @@
   display: flex;
 
   -webkit-flex-flow: row wrap;
+  flex-wrap: wrap;
   justify-content: space-around;
 
   .grid-card-sm { width: 25%; }
