--- a/resources/gato-template-wittliff/css/_grid.scss
+++ b/resources/gato-template-wittliff/css/_grid.scss
@@ -4,8 +4,10 @@ div.grid-container {
 
 	ul.grid-filter:before {
 		content: "YOU ARE A...";
+		display: block;
+		white-space: nowrap;
 		color: white;
-		padding: 2rem 7rem;
+		padding: 2.5rem 4rem;
 		vertical-align: middle;
 		font-size: 2.3rem;
 		letter-spacing: .3rem;
@@ -18,16 +20,19 @@ div.grid-container {
 		width: 100%;
 		margin: 0;
 		padding: 0;
+		display: flex;
 
 		li {
-			display: inline-block;
+			width: 100%;
 
 			a {
-				display: inline-block;
+				display: block;
 				text-decoration: none;
 				color: white;
-				padding: 2.5rem 7rem;
+				padding: 2.5rem 0;
+				width: 100%;
 				vertical-align: middle;
+				text-align: center;
 				font-size: 2.3rem;
 				letter-spacing: .3rem;
 				font-weight: 200;
